--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -5,27 +5,22 @@ header {
     background-position: center;
 }
 
+main {
+    padding-top: 2rem;
+    background-color: lightskyblue;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
 .grid__l-elem, .grid__r-elem {
-    border: dashed red;
+    /* border: dashed red; */
     height: 428px;
     display: flex;
     flex-direction: column;
-}
-
-.product_text {
-    margin-top: 10px;
-    text-align: center;
-}
-
-.product_image {
-    height: 316px;
-    margin: 30px 24px 0px;
-    border: solid black;
+    align-items: center;
 }
 
 footer {
