--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -1,17 +1,24 @@
 header {
-    height: 350px;
+    height: 450px;
     background-image: url("../img/header_image.jpg");
     background-size: cover;
     background-position: center;
 }
 
-._carousel_view {
-    background-color: gray;
+.header-text {
+    padding-top: 115px;
+    font-size: 48px;
+}
+
+.view {
+    height: 355px;
 }
 
 main {
-    padding-top: 2rem;
-    background-color: lightskyblue;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-image: url("../img/main_backgrounds/1.jpg");
+    background-size: cover;
 }
 
 .grid {
@@ -22,14 +29,15 @@ main {
 .grid__l-elem, .grid__r-elem {
     /* border: dashed red; */
     padding-top: 55px;
-    height: 428px;
+    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 footer {
-    padding-top: 16px;
+    height: max-content;
+    background-image: url("../img/header_image.jpg");
 }
 
 .copyright {
@@ -46,6 +54,9 @@ footer {
 }
 
 @media (max-width: 750px) {
+    header {
+        height: 332px;
+    }
     .grid {
         display: flex;
         flex-direction: column;
