--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -1,12 +1,13 @@
 header {
-    height: 450px;
+    padding-top: 100px;
+    padding-bottom: 125px;
+    height: max-content;
     background-image: url("../img/header_image.jpg");
     background-size: cover;
     background-position: center;
 }
 
 .header-text {
-    padding-top: 115px;
     font-size: 48px;
 }
 
@@ -49,15 +50,9 @@ footer {
 
 
 
-@media (max-width: 360px) {
-    header {
-        height: 256px;
-    }
-}
-
 @media (max-width: 750px) {
-    header {
-        height: 332px;
+    .header-text {
+        font-size: 32px;
     }
     .grid {
         display: flex;
