--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -1,30 +1,27 @@
 header {
     padding-top: 100px;
     padding-bottom: 125px;
-    height: max-content;
+}
+
+.header-background {
     background-image: url("../img/header_image.jpg");
     background-size: cover;
     background-position: center;
+    height: max-content;
 }
 
-.header-text {
-    font-size: 48px;
-}
+.header-text { font-size: 48px; }
 
 
 
 .heading-header {
-    padding-bottom: 18px;
     text-align: center;
 }
 
 .heading {
     padding-top: 46px;
     padding-bottom: 46px;
-    border-top: solid black 4px;
-    border-bottom: solid black 4px;
     align-items: center;
-    background-image: url("../img/desert-sky.jpg");
     background-size: cover;
     height: max-content;
 }
@@ -65,14 +62,28 @@ main {
 .main-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
+    border-radius: 65px;
+    border-top: solid darkcyan 3px;
+    border-bottom: solid darkcyan 3px;
+    border-left: solid darkcyan 2px;
+    border-right: solid darkcyan 2px;
 }
 
 .main-grid-item {
-    padding-top: 55px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: max-content;
+}
+
+#arch-based-distros,
+#debian-based-distros,
+#independent-distros,
+#maybe-interesting {
+    padding-top: 56px;
 }
 
 footer {
@@ -89,12 +100,19 @@ footer {
 
 @media (max-width: 750px) {
     .header-text {
-        font-size: 30px;
+        font-size: 28px;
     }
+
     .main-grid {
         display: flex;
         flex-direction: column;
     }
+
+    .heading {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
     .heading-grid-top, .heading-grid-bottom {
         display: flex;
         flex-direction: column;
